using productDTO in controller